All Filters Update + Order List

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -229,7 +229,7 @@
   "Redemption Mode": "Redeeemption Mode",
   "Last Scanned Date": "Last Scanned Date",
   "Scan Count": "Scan Count",
-  "Help And SUpport": "Help And SUpport",
+  "Help And SUpport": "Help And Support",
   "Enter Your Name": "Enter Your Name",
   "Kindly submit the details to continue": "Kindly submit the details to continue",
   "Please start scanning by pointing the camera towards the QR Code": "Please start scanning by pointing the camera towards the QR Code",
