--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -40,7 +40,7 @@
   "warranty history": "Warranty History",
   "you have": "you have",
   "lifetime earnings": "Lifetime Earnings",
-  "lifetime burns": "Lifetime Burns",
+  "lifetime burns": "Lifetime Redeeemption",
   "redeemed ledger": "Redeemed Ledger",
   "refer to your friend and get a point": "Refer to your friend and Get a point",
   "reward of": "Reward of",
