--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -169,7 +169,7 @@
   "Coupon": "Coupon",
   "Previous Transaction History": "Previous Transaction History",
   "Total Points": "Total Points",
-  "My Loyalty": "My Loyalty",
+  "My Loyalty": "Passbook",
   "Bank Details": "Bank Details",
   "MY Program": "My Program",
   "Ozone Products": "Ozone Products",
